[package]
name = "xor-str-encode"
version = "0.1.0"
edition = "2021"
authors = ["wcz <hwyrqw@163.com>"]
keywords = [
    "xor",
    "encrypt",
    "compile",
    "encode",
    "decode"
]
description = "XOR 编译期加密字符串并且运行时自动解密,XOR encrypts strings at compile time and decrypts them automatically at run time"
license = "Apache-2.0"
[lib]
proc-macro = true
[dependencies]
syn = {version =  "2.0.64" }
